<resources>
    <string name="app_name">PlaylistRv</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="unknown">Unknown</string>
    <string name="number_of_song">0</string>
    <string name="duration">0:00</string>
    <string name="playlist">Playlist</string>
    <string name="music_list">Music list</string>
</resources>