<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".MainFragment">

    <ImageView
        android:id="@+id/neffex"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_margin="40dp"
        android:src="@drawable/bts_collage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/now_playing"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/neffex"
        app:layout_constraintStart_toStartOf="@id/neffex"
        app:layout_constraintTop_toBottomOf="@id/neffex" />

    <TextView
        android:id="@+id/tv_song_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tv_now_playing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_now_playing" />

    <TextView
        android:id="@+id/tv_song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_list"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_song_artist"
        app:layout_constraintTop_toBottomOf="@id/tv_song_artist" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_music_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rv_music_list"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_song_name"
        tools:listitem="@layout/item_music" />

</androidx.constraintlayout.widget.ConstraintLayout>